@@ -45,6 +45,7 @@ public:
 	
 	virtual ~DSIGAlgorithmHandlerDefault() {};
 
+    virtual AlgorithmClassType getAlgorithmClass(const XMLCh* alg) const;
 
 	virtual XSECAlgorithmHandler * clone(void) const;
 
